[package]
name = "rust_bioutils"
version = "0.1.0"
authors = ["cgreco206664 <cgreco@genedx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = "0.36.0"
bio = "*"
itertools = "*"
clap = "2.33.0"
threadpool = "*"